fix: Change the width of container header's icon from 110px to 120px and change container's spacing too

--- a/app/bin/main/styles/MahasiswaScene.css
+++ b/app/bin/main/styles/MahasiswaScene.css
@@ -5,7 +5,7 @@
 
 .header {
   -fx-padding: 15px 38px;
-  -fx-spacing: 125px;
+  -fx-spacing: 110px;
 }
 
 .header > Label {
